--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -30,6 +30,7 @@
                     <input type="password" class="form-control rounded-full" id="password" name="password" placeholder="Enter your password" required>
                 </div>
                 <button type="submit" class="btn bg-black hover:bg-[#4A4949] text-white btn-block rounded-full py-2 mt-14">Login</button>
+                <p class="text-center mt-2">Don't have an account? <span class="font-bold"><a href="/register">Register</a></span></p>
             </form>
         </div>
     </div>
