--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -6,11 +6,19 @@
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-<div class="content-container d-flex align-items-center justify-content-center mx-auto">
-	<div class="container col-md-12">
-		<h2><strong>Register</strong></h2>
-		<a href="/register_admin" class="btn btn-primary btn-custom btn-block">Admin</a>
-        <a href="/register_user" class="btn btn-primary btn-custom btn-block">User</a>
+<div class="grid justify-items-stretch w-screen min-h-screen">
+	<div class="justify-self-center relative min-w-[429px] max-w-[429px] h-full bg-[#FFF5E5] overflow-hidden">
+		<img src="{% static '/images/bg-login.png' %}"  alt="" class="absolute w-full h-auto bottom-0">
+		<div class="relative p-5 h-full grid content-center">
+			<div>
+				<div class="bg-white p-4 rounded-2xl drop-shadow-md">
+					<p class="text-center">Please chose Your Role</p>
+					<div class="mt-3 flex flex-col gap-3 ">
+						<a href="/register_admin" class=" bg-[#4A4949] hover:bg-black w-full text-center text-white p-2 rounded-xl hover:no-underline">Admin</a>
+						<a href="/register_user" class=" bg-[#4A4949] hover:bg-black w-full text-center text-white p-2 rounded-xl hover:no-underline">User</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
 {% endblock content %}
