--- a/app_pengguna/templates/daftar_loker.html
+++ b/app_pengguna/templates/daftar_loker.html
@@ -6,9 +6,9 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <p class="card-title"><strong>Nama Loker:</strong> {{ loker_list.0.grup_loker.nama_loker }}</p>
-                    <p class="card-text"><strong>Alamat Loker:</strong> {{ loker_list.0.grup_loker.alamat_loker }}</p>
-                    <p class="card-text"><strong>Harga per 15 menit:</strong> Rp{{ loker_list.0.grup_loker.harga_loker }}</p>
+                    <p class="card-title"><strong>Nama Loker:</strong> {{ grup_loker.nama_loker }}</p>
+                    <p class="card-text"><strong>Alamat Loker:</strong> {{ grup_loker.alamat_loker }}</p>
+                    <p class="card-text"><strong>Harga per 15 menit:</strong> Rp{{ grup_loker.harga_loker }}</p>
                 </div>
             </div>
         </div>
