--- a/app_admin/templates/dashboard_admin.html
+++ b/app_admin/templates/dashboard_admin.html
@@ -31,6 +31,11 @@
                         <input type="text" aria-labelledby="status" class="form-control" placeholder="" value="Admin" id="status-edit" disabled="true">
                     </div>
 				</div>
+				<div class="btn-toolbar mt-3 mx-3" role="toolbar" aria-label="Toolbar with button groups">
+					<div class="btn-group me-2" role="group" aria-label="First group">
+						<a href="{% url 'app_admin:manage' %}" class="btn btn-primary btn-block">Manage Entity</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
