--- a/app_admin/templates/dashboard_admin.html
+++ b/app_admin/templates/dashboard_admin.html
@@ -35,6 +35,12 @@
 					<div class="btn-group me-2" role="group" aria-label="First group">
 						<a href="{% url 'app_admin:manage' %}" class="btn btn-primary btn-block">Manage Entity</a>
 					</div>
+					<div class="btn-group me-2" role="group" aria-label="First group">
+						<a href="{% url 'app_admin:add_notification' %}" class="btn btn-primary btn-block">Add Notification</a>
+					</div>
+					<div class="btn-group me-2" role="group" aria-label="First group">
+						<a href="https://web.whatsapp.com/" target="_blank" class="btn btn-success btn-block">Open Whatsapp</a>
+					</div>
 				</div>
 			</div>
 		</div>
