--- a/app_pengguna/templates/dashboard_pengguna.html
+++ b/app_pengguna/templates/dashboard_pengguna.html
@@ -41,7 +41,15 @@
 					<div class="btn-group" role="group" aria-label="Third group">
 						<a href="{% url 'app_pengguna:kembalikan_loker' %}" class="btn btn-primary btn-block">Kembalikan Loker</a>
 					</div>
-				</div>				
+				</div>		
+				<div class="btn-toolbar mt-3 mx-3" role="toolbar" aria-label="Toolbar with button groups">
+					<div class="btn-group" role="group" aria-label="First group">
+						<a href="{% url 'app_pengguna:view_notification' %}" class="btn btn-primary btn-block">Notification Inbox</a>
+					</div>
+					<div class="btn-group" role="group" aria-label="First group">
+						<a href="{% url 'app_pengguna:hubungi_admin' %}" target="_blank" class="btn btn-success btn-block ml-2">Minta Bantuan</a>
+					</div>
+				</div>		
 			</div>
 		</div>
 	</div>
