--- a/app_pengguna/templates/close_loker.html
+++ b/app_pengguna/templates/close_loker.html
@@ -7,10 +7,10 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <p class="card-title"><strong>Nama Loker:</strong> {{ loker.grup_loker.nama_loker }}</p>
-                    <p class="card-text"><strong>Alamat Loker:</strong> {{ loker.grup_loker.alamat_loker }}</p>
-                    <p class="card-text"><strong>Harga per 15 menit:</strong> Rp{{ loker.grup_loker.harga_loker }}</p>
-                    <p class="card-text"><strong>Nomor Loker:</strong> {{ loker.nomor_loker }}</p>
+                    <p class="card-title"><strong>Nama Loker:</strong> {{ transaksi.loker.grup_loker.nama_loker }}</p>
+                    <p class="card-text"><strong>Alamat Loker:</strong> {{ transaksi.loker.grup_loker.alamat_loker }}</p>
+                    <p class="card-text"><strong>Harga per 15 menit:</strong> Rp{{ transaksi.loker.grup_loker.harga_loker }}</p>
+                    <p class="card-text"><strong>Nomor Loker:</strong> {{ transaksi.loker.nomor_loker }}</p>
                     {% if message %}
                         <div class="alert alert-{{message_flag}}">
                             {{ message }}
@@ -21,7 +21,7 @@
                         <div class="qr-img">
                             <img src="/media/{{ img_name }}" alt="qr code" style="width: 100%;">
                         </div>
-                        <a href="{% url 'app_pengguna:close_loker' loker.id %}" class="btn btn-info">Perbarui tampilan setelah Scan</a>
+                        <a href="{% url 'app_pengguna:close_loker' transaksi.id %}" class="btn btn-info">Perbarui tampilan setelah Scan</a>
                     {% endif %}
                 </div>
             </div>
