--- a/app_admin/templates/dashboard_admin.html
+++ b/app_admin/templates/dashboard_admin.html
@@ -12,6 +12,7 @@
 		<div class="flex gap-3 items-center  overflow-x-auto">
 			<p class="text-[#3F5F8B]">{{username}}</p>
 			<img src="{% static '/images/person.png' %}"  alt="" class=" h-8 w-auto">
+			<a href="{% url 'logout' %}" class="block py-2 px-3 rounded text-[#870000]">Log Out</a>
 		</div>
 	</div>
 
