--- a/app_pengguna/templates/close_loker.html
+++ b/app_pengguna/templates/close_loker.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_bootstrap.html' %}
 {% block content %}
 <div class="container">
     <h1 class="text-center">Pengembalian Loker</h1>
