--- a/app_pengguna/templates/kembalikan_loker.html
+++ b/app_pengguna/templates/kembalikan_loker.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_bootstrap.html' %}
 {% block content %}
 <div class="container">
     <h2 class="mt-3">Pilih Loker untuk Dikembalikan</h2>
@@ -22,7 +22,9 @@
                     <td>{{ transaksi.loker.grup_loker.alamat_loker }}</td>
                     <td>{{ transaksi.loker.nomor_loker }}</td>
                     <td>{{ transaksi.loker.status_loker }}</td>
-                    <th><a href="{% url 'app_pengguna:close_loker' transaksi.id %}" class="btn btn-info">Pilih</a></th>
+                    <td>
+                        <a href="#" class="btn btn-info" onclick="konfirmasiPilih('{% url 'app_pengguna:close_loker' transaksi.id %}')">Pilih</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -30,4 +32,15 @@
     </div>    
     </form>
 </div>
+
+<script>
+    function konfirmasiPilih(url) {
+        var konfirmasi = confirm("Apakah Anda yakin ingin memilih loker?");
+        if (konfirmasi) {
+            window.location.href = url;
+        } else {
+            // handle
+        }
+    }
+</script>
 {% endblock content %}
