--- a/app_pengguna/templates/view_notification.html
+++ b/app_pengguna/templates/view_notification.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_bootstrap.html' %}
 {% block content %}
 <div class="container">
     <h2 class="mt-2">Notification Inbox</h2>
