--- a/app_pengguna/templates/dashboard_pengguna.html
+++ b/app_pengguna/templates/dashboard_pengguna.html
@@ -27,6 +27,9 @@
 						<a href="#" class="block py-2 px-3 text-white rounded bg-[#5DCFB5] " aria-current="page">Home</a>
 					</li>
 					<li>
+						<a href="{% url 'app_pengguna:history_topup' %}" class="block py-2 px-3 rounded text-gray-400">History Top Up</a>
+					</li>
+					<li>
 						<a href="{% url 'app_pengguna:hubungi_admin' %}" class="block py-2 px-3 rounded text-gray-400">Hubungin Admin</a>
 					</li>
 					<li>
