--- a/authentication/templates/home.html
+++ b/authentication/templates/home.html
@@ -5,7 +5,7 @@
 {% endblock meta %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> -->
 <div class="w-screen min-h-screen p-10 md:px-32">
 	<div class=" flex justify-end">
 		<a href="/login" class="bg-[#5DCFB5] py-2 px-10 rounded-full">Login</a>
