add feature feedback

--- a/app_pengguna/templates/dashboard_pengguna.html
+++ b/app_pengguna/templates/dashboard_pengguna.html
@@ -47,8 +47,12 @@
 						<a href="{% url 'app_pengguna:view_notification' %}" class="btn btn-primary btn-block">Notification Inbox</a>
 					</div>
 					<div class="btn-group" role="group" aria-label="First group">
+						<a href="{% url 'app_pengguna:history_transaksi' %}" target="_blank" class="btn btn-primary btn-block ml-2">History Transaksi</a>
+					</div>
+					<div class="btn-group" role="group" aria-label="First group">
 						<a href="{% url 'app_pengguna:hubungi_admin' %}" target="_blank" class="btn btn-success btn-block ml-2">Minta Bantuan</a>
 					</div>
+
 				</div>		
 			</div>
 		</div>
