--- a/app_pengguna/templates/close_loker.html
+++ b/app_pengguna/templates/close_loker.html
@@ -15,7 +15,14 @@
                         <div class="alert alert-{{message_flag}}">
                             {{ message }}
                         </div>
-                        <a href="{% url 'app_pengguna:dashboard_pengguna' %}" class="btn btn-info">Kembali ke Dashboard</a>
+                        <div class="btn-toolbar mt-3 mx-3" role="toolbar" aria-label="Toolbar with button groups">
+                            <div class="btn-group me-2 mb-2" role="group" aria-label="First group">
+                                <a href="{% url 'app_pengguna:dashboard_pengguna' %}" class="btn btn-info">Kembali ke Dashboard</a>
+                            </div>
+                            <div class="btn-group me-2" role="group" aria-label="Second group">
+                                <a href="{% url 'app_pengguna:feedback' transaksi.id %}" class="btn btn-primary btn-block">Berikan Feedback</a>
+                            </div>
+                        </div>
                     {% endif %}
                     {% if img_name %}
                         <div class="qr-img">
