fix migration (merge)

--- a/app_pengguna/templates/dashboard_pengguna.html
+++ b/app_pengguna/templates/dashboard_pengguna.html
@@ -94,6 +94,14 @@
 					<p class="mt-2 text-xs text-center">Kembali Pinjaman</p>
 				</a>
 			</div>
+			<div class="grid grid-cols-3 mt-4">
+				<a class="hover:no-underline hover:text-[#6CCBB5]" href="{% url 'app_pengguna:history_transaksi' %}">
+					<div class="flex justify-center">					
+						<img src="{% static '/images/list-locker-icon.png' %}"  alt="" class=" h-8 w-8">
+					</div>
+					<p class="mt-2 text-xs text-center">History Transaksi</p>
+				</a>
+			</div>
 
 			<div class="mt-4">
 				<p>Pinjaman Aktif</p>
